--- a/exercises/example/config.json
+++ b/exercises/example/config.json
@@ -7,7 +7,7 @@
     }
   },
   "natural_language": "en",
-  "resources": "exercises/example/",
+  "resources": "exercises/example/evaluation",
   "source": "exercises/example/solution/solution.txt",
   "judge": ".",
   "workdir": "",
